updated audience section

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -24,7 +24,7 @@
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>There are two target audiences. The first is families looking for exciting or tame trips to enjoy together. The second is for seasoned and capable rafters looking for more demanding trips. The company wants to provide options for anyone who is interested in a rafting trip.   </p>
+    <p>The target audience is young to middle-aged thrill seekers who are looking for a new, exciting, and demanding adventure trip. Rafters will be provided with appropriate equipment and guides who will prepare groups with all the knowledge they need for the trip. The experience will leave customers with incredible memories and a desire to enjoy the adrenaline again and again.  </p>
     <!-- change this -->
 
     <hr />
