--- a/khmerstories/site-plan.html
+++ b/khmerstories/site-plan.html
@@ -62,10 +62,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Verdana  <!-- change this -->
+        Heading Font: Tahoma  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Arial  <!-- change this -->
+        Paragraph Font: Roboto  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Pchum Ben</a>
+        <a href="#">Hei Neak Ta</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Pchum Ben <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Hei Neak Ta  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,26 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The home page will cover the Khmer Rouge and how it lead to a loss of a lot of culture and technology. It will briefly cover the recovery of the country and introduce two festival celebrations which will be covered in the subpages.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/homeimage.jpg" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        This page will cover the background information and celebration traditions of Pchum Ben.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/monk.jpg" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        This page will cover the background information and celebration traditions of Hei Neak Ta.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/heineakta.jpg" alt="image for page3">
 
       </ul>
       <hr>
